ready for revew: how to add custom validation rules

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,11 @@
 {{ define "main" }}
+
+<style>
+  code {
+    background: initial;
+    border: none;
+  }
+</style>
 <main role="main">
   <div>
     <article id="content">
