--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,6 @@
 {{ define "main"}}
-
-<h1>The page your looking for isn't here</h1>
-
+<h1 style="text-align:center">The page your looking for isn't here</h1>
+<p style="text-align:center">
+  <a href="/">Go home</a>
+</p>
 {{ end }}
